--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -10,7 +10,7 @@ arch:
   - armv7
 image: "davidusb/image-{arch}-emhass"
 ports:
-  5000/tcp: null
+  5000/tcp: 5000
 ports_description:
   5000/tcp: Web interface (Not required for Ingress)
 webui: http://[HOST]:[PORT:5000]
