--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -12,7 +12,7 @@ image: "davidusb/image-{arch}-emhass"
 ports:
   5000/tcp: 5000
 ports_description:
-  5000/tcp: Web interface (Not required for Ingress)
+  5000/tcp: Web interface and API
 webui: http://[HOST]:[PORT:5000]
 map:
   - config:rw
