--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -1,7 +1,7 @@
 numpy==1.22.2
 pandas==1.4.1
-six==1.16.0
-pvlib>=0.9.1
+scipy<1.9.0
+pvlib>=0.10.1
 protobuf>=3.0.0
 pytz>=2021.1
 requests>=2.25.1
@@ -9,8 +9,9 @@ beautifulsoup4>=4.9.3
 pulp>=2.4
 pyyaml>=5.4.1
 tables==3.7.0
+skforecast==0.9.1
 flask>=2.0.3
 waitress>=2.1.1
 plotly>=5.6.0
-emhass==0.4.15
+emhass==0.5.0
 #git+https://github.com/davidusb-geek/emhass
