--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.22.2
-pandas==1.4.1
-scipy<1.9.0
+numpy==1.26.0
+pandas==2.0.3
+scipy==1.11.3
 pvlib>=0.10.1
 protobuf>=3.0.0
 pytz>=2021.1
@@ -8,10 +8,10 @@ requests>=2.25.1
 beautifulsoup4>=4.9.3
 pulp>=2.4
 pyyaml>=5.4.1
-tables==3.7.0
-skforecast==0.10.1
+tables==3.9.1
+skforecast==0.11.0
 flask>=2.0.3
 waitress>=2.1.1
 plotly>=5.6.0
-emhass==0.5.1
+emhass==0.6.0
 #git+https://github.com/davidusb-geek/emhass
