--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.5.3
+version: 0.5.4
 slug: emhass
 arch:
   - aarch64
@@ -39,6 +39,8 @@ options:
   set_battery_dynamic: false
   battery_dynamic_max: 0.9
   battery_dynamic_min: -0.9
+  weight_battery_discharge: 1.0
+  weight_battery_charge: 1.0
   load_forecast_method: "naive"
   sensor_power_photovoltaics: sensor.power_photovoltaics
   sensor_power_load_no_var_loads: sensor.power_load_no_var_loads
@@ -99,6 +101,8 @@ schema:
   set_battery_dynamic: bool
   battery_dynamic_max: float(0.0,1.0)
   battery_dynamic_min: float
+  weight_battery_discharge: float
+  weight_battery_charge: float
   load_forecast_method: str
   sensor_power_photovoltaics: str
   sensor_power_load_no_var_loads: str
