--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,14 +1,14 @@
 name: EMHASS
 description: Energy Management for Home Assistant
-url: https://github.com/davidusb-geek/emhass
-version: 0.5.4
+url: https://github.com/onIon-energy/emhass
+version: 0.5.4-testonion
 slug: emhass
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
-image: "davidusb/image-{arch}-emhass"
+#image: "davidusb/image-{arch}-emhass"
 ports:
   5000/tcp: 5000
 ports_description:
