--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -114,6 +114,8 @@ schema:
     - nominal_power_of_deferrable_loads: int(0,)
   list_operating_hours_of_each_deferrable_load:
     - operating_hours_of_each_deferrable_load: int(0,)
+  list_end_timesteps_of_each_deferrable_load:
+    - end_timesteps_of_each_deferrable_load: int(0,)
   list_peak_hours_periods_start_hours:
     - peak_hours_periods_start_hours: str
   list_peak_hours_periods_end_hours:
