--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -14,4 +14,5 @@ skforecast==0.11.0
 flask>=2.0.3
 waitress>=2.1.1
 plotly>=5.6.0
-git+https://github.com/onIon-energy/emhass
+emhass==0.6.2
+#git+https://github.com/davidusb-geek/emhass
