--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -23,6 +23,8 @@ homeassistant_api: true
 ingress: true
 ingress_port: 5000
 ingress_stream: true
+panel_icon: mdi:home-lightning-bolt-outline
+panel_title: EMHASS
 options:
   logging_level: INFO
   costfun: profit
