--- a/emhass/build.yaml
+++ b/emhass/build.yaml
@@ -1,8 +1,5 @@
-build_from:
-  amd64: ghcr.io/home-assistant/amd64-base-debian:bookworm
-  armhf: ghcr.io/home-assistant/armhf-base-debian:bookworm
-  armv7: ghcr.io/home-assistant/armv7-base-debian:bookworm
-  aarch64: ghcr.io/home-assistant/aarch64-base-debian:bookworm
+args:
+  build_version: addon
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
