--- a/emhass/build.yaml
+++ b/emhass/build.yaml
@@ -1,5 +1,5 @@
 args:
-  build_version: addon
+  build_version: addon-git
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
