--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -27,6 +27,7 @@ panel_icon: mdi:home-lightning-bolt-outline
 panel_title: EMHASS
 environment:
   OPTIONS_PATH: '/data/options.json'
+  CONFIG_PATH: '/app/config_emhass.yaml'
 options:
   logging_level: INFO
   costfun: profit
