Dockerfile, comment out unused

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -73,9 +73,9 @@ WORKDIR /tmp/emhass
 #Branch
 RUN git checkout $build_branch
 RUN mkdir -p /app/src/emhass/
-RUN mkdir -p /app/data/
+#RUN mkdir -p /app/data/ #if config.yaml DATA_PATH=/app/data/
 RUN cp -r /tmp/emhass/src/emhass/. /app/src/emhass/
-RUN cp /tmp/emhass/data/opt_res_latest.csv  /app/data/
+#RUN cp /tmp/emhass/data/opt_res_latest.csv  /app/data/ #if config.yaml DATA_PATH=/app/data/
 RUN cp /tmp/emhass/setup.py /app/
 RUN cp /tmp/emhass/README.md /app/
 WORKDIR /app
