--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -5,12 +5,16 @@ on:
     types: [published]
 
 jobs:
-  publish_amd64:
-    name: Publish-amd64
+  publish:
+    strategy:
+      fail-fast: false
+      matrix:
+        architecture: [amd64,aarch64,armhf,armv7]
+    name: Publish-${{ matrix.architecture }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -20,60 +24,6 @@ jobs:
         uses: home-assistant/builder@master
         with:
           args: |
-            --amd64 \
-            --target emhass \
-            --docker-hub davidusb
-  publish_aarch64:
-    name: Publish-aarch64
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --aarch64 \
-            --target emhass \
-            --docker-hub davidusb
-  publish_armhf:
-    name: Publish-armhf
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --armhf \
-            --target emhass \
-            --docker-hub davidusb
-  publish_armv7:
-    name: Publish-armv7
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --armv7 \
+            --${{ matrix.architecture }} \
             --target emhass \
             --docker-hub davidusb
