--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -26,11 +26,12 @@ ingress_stream: true
 panel_icon: mdi:home-lightning-bolt-outline
 panel_title: EMHASS
 environment:
-  OPTIONS_PATH: '/data/options.json'
-  CONFIG_PATH: '/app/config_emhass.yaml'
-  DATA_PATH: '/data/'
+  OPTIONS_PATH: "/data/options.json"
+  CONFIG_PATH: "/app/config_emhass.yaml"
+  DATA_PATH: "/data/"
 options:
   logging_level: INFO
+  data_path: default
   costfun: profit
   sensor_power_photovoltaics: sensor.power_photovoltaics
   sensor_power_load_no_var_loads: sensor.power_load_no_var_loads
@@ -84,6 +85,7 @@ schema:
   hass_url: "str?" #optional
   long_lived_token: "password?" #optional
   logging_level: "list(DEBUG|INFO|WARNING|ERROR)?"
+  data_path: "list(default|/data/|/share/)?"
   costfun: "list(profit|cost|self-consumption)?"
   sensor_power_photovoltaics: "str?"
   sensor_power_load_no_var_loads: "str?"
