Added a new control parameter for hybrid inverters and prepared a new version

--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.9.1
+version: 0.10.0
 slug: emhass
 arch:
   - aarch64
@@ -80,6 +80,7 @@ options:
     - modules_per_string: 16
   list_strings_per_inverter:
     - strings_per_inverter: 1
+  inverter_is_hybrid: false
   set_use_battery: false
   battery_nominal_energy_capacity: 5000
 schema:
@@ -148,6 +149,7 @@ schema:
     - modules_per_string: "int(0,)?"
   list_strings_per_inverter:
     - strings_per_inverter: "int(0,)?"
+  inverter_is_hybrid: "bool?"
   set_use_battery: "bool?"
   set_battery_dynamic: "bool?" #optional
   battery_dynamic_max: "float(0.0,1.0)?" #optional
