--- a/emhass/config_emhass.yaml
+++ b/emhass/config_emhass.yaml
@@ -2,7 +2,7 @@
 
 retrieve_hass_conf:
   freq: 30 # The time step to resample retrieved data from hass in minutes
-  days_to_retrieve: 8 # We will retrieve data from now and up to days_to_retrieve days
+  days_to_retrieve: 2 # We will retrieve data from now and up to days_to_retrieve days
   var_PV: 'sensor.power_photovoltaics' # Photovoltaic produced power sensor in Watts
   var_load: 'sensor.power_load_no_var_loads' # Household power consumption sensor in Watts (deferrable loads should be substracted)
   load_negative: False # Set to True if the retrived load variable is negative by convention
@@ -13,6 +13,7 @@ retrieve_hass_conf:
   - 'sensor.power_photovoltaics'
   - 'sensor.power_load_no_var_loads'
   method_ts_round: 'nearest' # Set the method for timestamp rounding, options are: first, last and nearest
+  continual_publish: False # Save published sensor data and check for state change every freq minutes
 
 optim_conf:
   set_use_battery: False # consider a battery storage
@@ -76,6 +77,7 @@ plant_conf:
   - 16 
   strings_per_inverter: # The number of used strings per inverter
   - 1
+  inverter_is_hybrid: False # Set if it is a hybrid inverter (PV+batteries) or not
   Pd_max: 1000 # If your system has a battery (set_use_battery=True), the maximum discharge power in Watts
   Pc_max: 1000 # If your system has a battery (set_use_battery=True), the maximum charge power in Watts
   eta_disch: 0.95 # If your system has a battery (set_use_battery=True), the discharge efficiency
