updated add-on to match PR, commented actions that wont be used

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -1,5 +1,5 @@
-## EMHASS-Add-On Docker
-ARG BUILD_FROM
-ARG build_version=0.2.0
+# ## EMHASS-Add-On Docker
+# ARG BUILD_FROM
+# ARG build_version=0.2.0
 
-FROM ${BUILD_FROM}:${build_version} AS base
+# FROM ${BUILD_FROM}:${build_version} AS base
