--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -1,30 +1,30 @@
-name: "Publish"
+# name: "Publish"
 
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
 
-jobs:
-  publish:
-    timeout-minutes: 40
-    strategy:
-      fail-fast: false
-      matrix:
-        architecture: [amd64,aarch64,armhf,armv7]
-    name: Publish-${{ matrix.architecture }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --${{ matrix.architecture }} \
-            --target emhass \
-            --docker-hub davidusb
+# jobs:
+#   publish:
+#     timeout-minutes: 40
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         architecture: [amd64,aarch64,armhf,armv7]
+#     name: Publish-${{ matrix.architecture }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the repository
+#         uses: actions/checkout@v4
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Publish
+#         uses: home-assistant/builder@master
+#         with:
+#           args: |
+#             --${{ matrix.architecture }} \
+#             --target emhass \
+#             --docker-hub davidusb
