--- a/.github/workflows/publish_docker_manual_dispatch_amd64_aarch64.yaml
+++ b/.github/workflows/publish_docker_manual_dispatch_amd64_aarch64.yaml
@@ -1,41 +1,41 @@
-name: "Publish Manual Dispatch amd64/aarch64"
+# name: "Publish Manual Dispatch amd64/aarch64"
 
-on: [workflow_dispatch]
+# on: [workflow_dispatch]
 
-jobs:
-  publish_amd64:
-    name: Publish-amd64
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --amd64 \
-            --target emhass \
-            --docker-hub davidusb
-  publish_aarch64:
-    name: Publish-aarch64
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --aarch64 \
-            --target emhass \
-            --docker-hub davidusb
+# jobs:
+#   publish_amd64:
+#     name: Publish-amd64
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the repository
+#         uses: actions/checkout@v4
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Publish
+#         uses: home-assistant/builder@master
+#         with:
+#           args: |
+#             --amd64 \
+#             --target emhass \
+#             --docker-hub davidusb
+#   publish_aarch64:
+#     name: Publish-aarch64
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the repository
+#         uses: actions/checkout@v4
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Publish
+#         uses: home-assistant/builder@master
+#         with:
+#           args: |
+#             --aarch64 \
+#             --target emhass \
+#             --docker-hub davidusb
