--- a/.github/workflows/publish_docker_manual_dispatch_armhf.yaml
+++ b/.github/workflows/publish_docker_manual_dispatch_armhf.yaml
@@ -1,23 +1,23 @@
-name: "Publish Manual Dispatch armhf"
+# name: "Publish Manual Dispatch armhf"
 
-on: [workflow_dispatch]
+# on: [workflow_dispatch]
 
-jobs:
-  publish_armhf:
-    name: Publish-armhf
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --armhf \
-            --target emhass \
-            --docker-hub davidusb
+# jobs:
+#   publish_armhf:
+#     name: Publish-armhf
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the repository
+#         uses: actions/checkout@v4
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Publish
+#         uses: home-assistant/builder@master
+#         with:
+#           args: |
+#             --armhf \
+#             --target emhass \
+#             --docker-hub davidusb
