Enable watchdog in config.yml
Enable watchdog:

- Automatic restarts (if enabled)
- Fixes binary_sensor.emhass_running

https://developers.home-assistant.io/docs/add-ons/configuration

--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -14,6 +14,7 @@ ports:
 ports_description:
   5000/tcp: Web interface and API
 webui: http://[HOST]:[PORT:5000]
+watchdog: http://[HOST]:[PORT:5000]
 map:
   - share:rw
 init: false
